--- a/landingpage.html
+++ b/landingpage.html
@@ -66,10 +66,9 @@
     <!-- BUTTON LINKED -->
 
     <div class="buttonlink">
-      <button type="button" class="btn btn-primary">Ruang Ngaji</button>
-      <button type="button" class="btn btn-primary">Runag Donasi</button>
+      <a href="quran.com" class="btn btn-warning" role="button">Ruang Ngaji</a>
+      <a href="kitabisa.com" class="btn btn-warning" role="button">Ruang Donasi</a>
     </div>
-
     <!-- AKHIR BUTTON LINKED -->
   </body>
 </html>
