--- a/landingpage.html
+++ b/landingpage.html
@@ -66,9 +66,10 @@
     <!-- BUTTON LINKED -->
 
     <div class="buttonlink">
-      <a href="quran.com" class="btn btn-warning" role="button">Ruang Ngaji</a>
-      <a href="kitabisa.com" class="btn btn-warning" role="button">Ruang Donasi</a>
+      <a href="pagengaji.html" class="btn btn-warning" role="button">Ruang Ngaji</a>
+      <a href="pagedonasi.html" class="btn btn-warning" role="button">Ruang Donasi</a>
     </div>
+
     <!-- AKHIR BUTTON LINKED -->
   </body>
 </html>
