--- a/landingpage.html
+++ b/landingpage.html
@@ -67,7 +67,7 @@
 
     <div class="buttonlink">
       <button type="button" class="btn btn-primary">Ruang Ngaji</button>
-      <button type="button" class="btn btn-primary">Runag Donasi</button>
+      <button type="button" class="btn btn-primary">Ruang Donasi</button>
     </div>
 
     <!-- AKHIR BUTTON LINKED -->
