--- a/landingpage.html
+++ b/landingpage.html
@@ -66,8 +66,8 @@
     <!-- BUTTON LINKED -->
 
     <div class="buttonlink">
-        <a href="pagengaji.html" class="btn btn-warning" role="button">Ruang Doa Bro</a>
-      <a href="pagedonasi.html" class="btn btn-warning" role="button">Ruang Berbagi Sist</a>
+        <a href="pagengaji.html" class="btn btn-warning" role="button">Ruang Doa</a>
+      <a href="pagedonasi.html" class="btn btn-warning" role="button">Ruang Berbagi</a>
     </div>
 
     <!-- AKHIR BUTTON LINKED -->
