--- a/LandingPage/landingpage.html
+++ b/LandingPage/landingpage.html
@@ -6,15 +6,28 @@
     <title>Ruang Ngaji</title>
 
     <!-- BOOSTRAP AND STYLE -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- AWAL NAVBAR AWAL -->
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="#">Ruang Ngaji</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -43,11 +56,11 @@
         <span id="slide-4"></span>
         <span id="slide-5"></span>
         <div class="images">
-          <img src="img/quotes.png" />
-          <img src="img/About us.png" />
-          <img src="img/ruangdonasi.png" />
-          <img src="img/flashdisk murajaah.png" />
-          <img src="img/Buku anak-anak.png" />
+          <img src="../img/quotes.png" />
+          <img src="../img/About us.png" />
+          <img src="../img/ruangdonasi.png" />
+          <img src="../img/flashdisk murajaah.png" />
+          <img src="../img/Buku anak-anak.png" />
         </div>
       </div>
     </div>
@@ -66,8 +79,12 @@
     <!-- BUTTON LINKED -->
 
     <div class="buttonlink">
-        <a href="pagengaji.html" class="btn btn-warning" role="button">Ruang Doa</a>
-      <a href="pagedonasi.html" class="btn btn-warning" role="button">Ruang Berbagi</a>
+      <a href="pagengaji.html" class="btn btn-warning" role="button"
+        >Ruang Ngaji</a
+      >
+      <a href="pagedonasi.html" class="btn btn-warning" role="button"
+        >Ruang Donasi</a
+      >
     </div>
 
     <!-- AKHIR BUTTON LINKED -->
