--- a/Home/index.html
+++ b/Home/index.html
@@ -88,5 +88,13 @@
     </div>
 
     <!-- AKHIR BUTTON LINKED -->
+    <section>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </section>
   </body>
 </html>
