--- a/src/Home/index.html
+++ b/src/Home/index.html
@@ -56,11 +56,11 @@
         <span id="slide-4"></span>
         <span id="slide-5"></span>
         <div class="images">
-          <img src="../img/quotes.png" />
-          <img src="../img/About us.png" />
-          <img src="../img/ruangdonasi.png" />
-          <img src="../img/flashdisk murajaah.png" />
-          <img src="../img/Buku anak-anak.png" />
+          <img src="../../img/quotes.png" />
+          <img src="../../img/About us.png" />
+          <img src="../../img/ruangdonasi.png" />
+          <img src="../../img/flashdisk murajaah.png" />
+          <img src="../../img/Buku anak-anak.png" />
         </div>
       </div>
     </div>
@@ -79,16 +79,12 @@
     <!-- BUTTON LINKED -->
 
     <div class="buttonlink">
-      <a href="pagengaji.html" class="btn btn-warning" role="button"
-        >Ruang Ngaji</a
-      >
-      <a href="pagedonasi.html" class="btn btn-warning" role="button"
-        >Ruang Donasi</a
-      >
+      <button class="ngaji">Ruang Ngaji</button>
+      <button class="donasi">Ruang Donasi</button>
     </div>
 
     <!-- AKHIR BUTTON LINKED -->
-    <section>
+    <section class="ruang-ngaji">
       <div></div>
       <div></div>
       <div></div>
@@ -96,5 +92,36 @@
       <div></div>
       <div></div>
     </section>
+    <section class="ruang-donasi">
+      <div>
+        <img src="../../img/kobong.jpeg" alt="" />
+        <h6>Yayasan Ngobong Omah</h6>
+        <h4>KOBONGAN</h4>
+        <p>Terkumpul : Rp 1.000.000</p>
+        <button>Donasi</button>
+      </div>
+      <div>
+        <img src="../../img/kobong.jpeg" alt="" />
+        <h6>Yayasan Ngobong Omah</h6>
+        <h4>KOBONGAN</h4>
+        <p>Terkumpul : Rp 1.000.000</p>
+        <button>Donasi</button>
+      </div>
+      <div>
+        <img src="../../img/kobong.jpeg" alt="" />
+        <h6>Yayasan Ngobong Omah</h6>
+        <h4>KOBONGAN</h4>
+        <p>Terkumpul : Rp 1.000.000</p>
+        <button>Donasi</button>
+      </div>
+      <div>
+        <img src="../../img/kobong.jpeg" alt="" />
+        <h6>Yayasan Ngobong Omah</h6>
+        <h4>KOBONGAN</h4>
+        <p>Terkumpul : Rp 1.000.000</p>
+        <button>Donasi</button>
+      </div>
+    </section>
   </body>
+  <script src="main.js"></script>
 </html>
