nambah linked donasi

--- a/src/DetailDonasi/index.html
+++ b/src/DetailDonasi/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Ruang Ngaji</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- BOOSTRAP AND STYLE -->
+    <!-- link style & boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css" />
+
+    <title>Ruang Donasi</title>
   </head>
   <body>
-    <!-- AWAL NAVBAR AWAL -->
+    <!-- AWAL NAVBAR -->
+
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="#">Ruang Ngaji</a>
@@ -32,43 +34,17 @@
         </div>
       </div>
     </nav>
-    <!-- AKHIR NAVBAR TEXT -->
+    <!-- AKHIR NAVBAR -->
 
-    <!-- Carousel -->
-    <div class="wrapper">
-      <div class="slides">
-        <span id="slide-1"></span>
-        <span id="slide-2"></span>
-        <span id="slide-3"></span>
-        <span id="slide-4"></span>
-        <span id="slide-5"></span>
-        <div class="images">
-          <img src="../../img/ruangdonasi.png" />
-          <img src="../../img/About us.png us.png" />
-          <img src="../../img/quotes.png" />
-          <img src="../../img/Buku anak-anak.png murajaah.png" />
-          <img src="../../img/flashdisk murajaah.png anak-anak.png" />
-        </div>
-      </div>
-    </div>
-    <!-- NAVIGASI CARO -->
-    <div class="navigation">
-      <a href="#slide-1">1</a>
-      <a href="#slide-2">2</a>
-      <a href="#slide-3">3</a>
-      <a href="#slide-4">4</a>
-      <a href="#slide-5">5</a>
-    </div>
-    <!-- AKHIR NAVIGASI CARO -->
-    <!-- AKHIR Carousel -->
 
-    <!-- BUTTON LINKED -->
+    <!-- POSTER -->
 
-    <div class="buttonlink">
-      <a href="pagengaji.html" class="btn btn-warning" role="button">Ruang Ngaji</a>
-      <a href="pagedonasi.html" class="btn btn-warning" role="button">Ruang Donasi</a>
+    <div class="posterdonasi">
+      <img src="" alt="">
     </div>
 
-    <!-- AKHIR BUTTON LINKED -->
+    <!-- END POSTER -->
+
+
   </body>
 </html>
