--- a/src/Home/index.html
+++ b/src/Home/index.html
@@ -43,19 +43,11 @@
         <span id="slide-4"></span>
         <span id="slide-5"></span>
         <div class="images">
-<<<<<<< HEAD
-          <img src="../../img/ruangdonasi.png" />
-          <img src="../../img/About us.png" />
-          <img src="../../img/quotes.png" />
-          <img src="../../img/Buku anak-anak.png" />
-          <img src="../../img/flashdisk murajaah.png" />
-=======
-          <img src="../../img/quotes.png" />
-          <img src="../../img/About us.png" />
-          <img src="../../img/ruangdonasi.png" />
-          <img src="../../img/flashdisk murajaah.png" />
-          <img src="../../img/Buku anak-anak.png" />
->>>>>>> adf275f8f50c77bc8b701658080c52dee02ed670
+          <img src="/img/carousel/quotes.png" .. />
+          <img src="/img/carousel/About us.png" />
+          <img src="/img/carousel/ruangdonasi.png" />
+          <img src="/img/carousel/flashdisk murajaah.png" />
+          <img src="/img/carousel/Buku anak-anak.png" />
         </div>
       </div>
     </div>
@@ -74,18 +66,13 @@
     <!-- BUTTON LINKED -->
 
     <div class="buttonlink">
-<<<<<<< HEAD
-      <a href="pagengaji.html" class="btn btn-warning" role="button">Ruang Ngaji</a>
-      <a href="pagedonasi.html" class="btn btn-warning" role="button">Ruang Donasi</a>
-    </div>
-
-    <!-- AKHIR BUTTON LINKED -->
-=======
       <button class="ngaji">Ruang Ngaji</button>
       <button class="donasi">Ruang Donasi</button>
     </div>
 
     <!-- AKHIR BUTTON LINKED -->
+
+    <!-- NAV BUTTON RUANG NGAJI -->
     <section class="ruang-ngaji">
       <div></div>
       <div></div>
@@ -94,37 +81,49 @@
       <div></div>
       <div></div>
     </section>
+    <!-- END NAV BUTTON RUANG NGAJI -->
+
+    <!-- NAV BUTTON RUANG DONASI -->
     <section class="ruang-donasi">
       <div>
-        <img src="../../img/kobong.jpeg" alt="" />
-        <h6>Yayasan Ngobong Omah</h6>
-        <h4>KOBONGAN</h4>
-        <p>Terkumpul : Rp 1.000.000</p>
-        <button>Donasi</button>
+        <a href="https://kitabisa.com/campaign/bisabantuinfra">
+          <img src="../../img/kobong.jpeg" alt="" />
+          <h6>Yayasan Ngobong Omah</h6>
+          <h4>KOBONGAN</h4>
+          <p>Terkumpul : Rp 1.000.000</p>
+          <button>Donasi</button>
+        </a>
       </div>
       <div>
-        <img src="../../img/kobong.jpeg" alt="" />
-        <h6>Yayasan Ngobong Omah</h6>
-        <h4>KOBONGAN</h4>
-        <p>Terkumpul : Rp 1.000.000</p>
-        <button>Donasi</button>
+        <a href="https://kitabisa.com/campaign/bisabantuinfra">
+          <img src="../../img/kobong.jpeg" alt="" />
+          <h6>Yayasan Ngobong Omah</h6>
+          <h4>KOBONGAN</h4>
+          <p>Terkumpul : Rp 1.000.000</p>
+          <button>Donasi</button>
+        </a>
       </div>
       <div>
-        <img src="../../img/kobong.jpeg" alt="" />
-        <h6>Yayasan Ngobong Omah</h6>
-        <h4>KOBONGAN</h4>
-        <p>Terkumpul : Rp 1.000.000</p>
-        <button>Donasi</button>
+        <a href="https://kitabisa.com/campaign/bisabantuinfra">
+          <img src="../../img/kobong.jpeg" alt="" />
+          <h6>Yayasan Ngobong Omah</h6>
+          <h4>KOBONGAN</h4>
+          <p>Terkumpul : Rp 1.000.000</p>
+          <button>Donasi</button>
+        </a>
       </div>
       <div>
-        <img src="../../img/kobong.jpeg" alt="" />
-        <h6>Yayasan Ngobong Omah</h6>
-        <h4>KOBONGAN</h4>
-        <p>Terkumpul : Rp 1.000.000</p>
-        <button>Donasi</button>
+        <a href="https://kitabisa.com/campaign/bisabantuinfra">
+          <img src="../../img/kobong.jpeg" alt="" />
+          <h6>Yayasan Ngobong Omah</h6>
+          <h4>KOBONGAN</h4>
+          <p>Terkumpul : Rp 1.000.000</p>
+          <button>Donasi</button>
+        </a>
       </div>
     </section>
->>>>>>> adf275f8f50c77bc8b701658080c52dee02ed670
+    <!-- END NAV BUTTON RUANG DONASI -->
   </body>
+  <!-- RESOURCE JS -->
   <script src="main.js"></script>
 </html>
