rapihkan folder img & edit style / index

--- a/src/DetailDonasi/index.html
+++ b/src/DetailDonasi/index.html
@@ -36,15 +36,12 @@
     </nav>
     <!-- AKHIR NAVBAR -->
 
-
     <!-- POSTER -->
 
     <div class="posterdonasi">
-      <img src="" alt="">
+      <img src="/img/donasi/palestine.jpg" alt="donasi1" />
     </div>
 
     <!-- END POSTER -->
-
-
   </body>
 </html>
