--- a/src/DetailDonasi/index.html
+++ b/src/DetailDonasi/index.html
@@ -12,7 +12,6 @@
   </head>
   <body>
     <!-- AWAL NAVBAR -->
-
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="#">Ruang Ngaji</a>
@@ -22,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/src/Home/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Tentang Kami</a>
@@ -37,11 +36,20 @@
     <!-- AKHIR NAVBAR -->
 
     <!-- POSTER -->
-
-    <div class="posterdonasi">
-      <img src="/img/donasi/palestine.jpg" alt="donasi1" />
+    <div class="fotodonasi">
+      <img src="/img/donasi/palestine.jpg" />
+      <h1>Warga Palestina Butuh Bantuan Kita</h1>
+      <p>
+        Data terkini (17/10), korban warga sipil yang meninggal dunia akibat serangan di Jalur Gaza, Palestina mencapai 2.900+ orang, 1.000+ diantaranya adalah anak-anak. Sedangkan, 10.000+ orang luka berat dan ratusan ribu warga lainnya
+        mengungsi.
+      </p>
     </div>
-
     <!-- END POSTER -->
+
+    <!-- JUDUL GALANGAN -->
+
+    <!-- AKHIR JUDUL GALANGAN -->
   </body>
+  <!-- RESOURE JS -->
+  <script src="main.js"></script>
 </html>
