proggres bar dan font

--- a/src/DetailDonasi/index.html
+++ b/src/DetailDonasi/index.html
@@ -41,12 +41,20 @@
       <h1>Warga Palestina Butuh Bantuan Kita</h1>
       <p>
         Data terkini (17/10), korban warga sipil yang meninggal dunia akibat serangan di Jalur Gaza, Palestina mencapai 2.900+ orang, 1.000+ diantaranya adalah anak-anak. Sedangkan, 10.000+ orang luka berat dan ratusan ribu warga lainnya
-        mengungsi.
+        mengungsi. Namun, keadaan mereka di pengungsian sangat darurat, kebutuhan pokok mereka menipis! Sejak serangan Hamas akhir pekan lalu, Israel telah mengepung Gaza, memutus pasokan listrik, bahan bakar, makanan, barang dan air.
+        Pasokan listrik utama di Gaza padam setelah satu-satunya pembangkit listrik di sana kehabisan bahan bakar. Akibatnya, lebih dari 338.000 warga Palestina yang mengungsi mengalami kekurangan makanan dan kebutuhan lainnya untuk
+        bertahan hidup. Saat ini, lembaga filantropi yang ada di sini telah mengirimkan sebagian bantuan kepada para korban. Namun, karena keadaan yang terbatas, kami masih membutuhkan bantuan para orang baik di Indonesia. Untuk itu, dengan
+        rendah hati kami mengajak teman-teman menyalurkan bantuan untuk mereka. Bantuan sekecil apapun akan sangat membantu saudara kita yang terdampak konflik di Palestina.
       </p>
+      <hr />
     </div>
     <!-- END POSTER -->
 
     <!-- JUDUL GALANGAN -->
+
+    <div id="progress-bar-container">
+      <div id="progress-bar">40%</div>
+    </div>
 
     <!-- AKHIR JUDUL GALANGAN -->
   </body>
