--- a/src/DetailDonasi/index.html
+++ b/src/DetailDonasi/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- link style & boostrap -->
+    <!-- link style & boostrap &js -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css" />
 
@@ -50,13 +50,31 @@
     </div>
     <!-- END POSTER -->
 
-    <!-- JUDUL GALANGAN -->
+    <!-- PROGGRESBAR -->
 
     <div id="progress-bar-container">
-      <div id="progress-bar">40%</div>
+      <div id="progress-bar">%</div>
     </div>
 
-    <!-- AKHIR JUDUL GALANGAN -->
+    <!-- AKHIR PROGRESBAR -->
+
+    <!-- AWAL BUTTON NOMINAL -->
+
+    <div class="container">
+      <h2>Silakan Pilih Nominal:</h2>
+      <div class="button-row" id="buttonRow">
+        <!-- Baris 1 -->
+        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(10000, this)">Rp10.000</button>
+        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(25000, this)">Rp25.000</button>
+        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(50000, this)">Rp50.000</button>
+        <!-- Baris 2 -->
+        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(100000, this)">Rp100.000</button>
+        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(200000, this)">Rp200.000</button>
+        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(500000, this)">Rp500.000</button>
+      </div>
+      <button id="continueButton" onclick="continueToNextPage()" sss>Lanjut</button>
+    </div>
+    <!-- AKHIR BUTTON NOMINAL -->
   </body>
   <!-- RESOURE JS -->
   <script src="main.js"></script>
