--- a/src/Home/index.html
+++ b/src/Home/index.html
@@ -6,8 +6,17 @@
     <title>Ruang Ngaji</title>
 
     <!-- BOOSTRAP AND STYLE -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -15,7 +24,15 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="#">Ruang Ngaji</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -82,7 +99,10 @@
           <p>John Doe</p>
         </div>
         <i id="icon" class="bi bi-play-circle-fill"></i>
-        <audio id="audio" src="../../music/y2mate.com - Ariana Grande  Fantasize Lyrics.mp3"></audio>
+        <audio
+          id="audio"
+          src="../../music/y2mate.com - Ariana Grande  Fantasize Lyrics.mp3"
+        ></audio>
       </div>
     </section>
     <!-- END NAV BUTTON RUANG NGAJI -->
@@ -90,10 +110,10 @@
     <!-- NAV BUTTON RUANG DONASI -->
     <section class="ruang-donasi">
       <div>
-        <a href="/src/DetailDonasi/index.html">
-          <img src="/img/donasi/palestine.jpg" alt="" />
-          <h6>Bantuan Untuk Korban Palestina</h6>
-          <h4>Palestina</h4>
+        <a href="https://kitabisa.com/campaign/bisabantuinfra">
+          <img src="../../img/kobong.jpeg" alt="" />
+          <h6>Yayasan Ngobong Omah</h6>
+          <h4>KOBONGAN</h4>
           <p>Terkumpul : Rp 1.000.000</p>
           <button>Donasi</button>
         </a>
@@ -127,113 +147,7 @@
       </div>
     </section>
     <!-- END NAV BUTTON RUANG DONASI -->
-
-    <!-- AWAL FOOTER -->
-
-    <!-- Footer -->
-    <footer class="text-center text-lg-start text-muted">
-      
-        <div>
-          <a href="" class="me-4 link-secondary">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="" class="me-4 link-secondary">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="" class="me-4 link-secondary">
-            <i class="fab fa-google"></i>
-          </a>
-          <a href="" class="me-4 link-secondary">
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a href="" class="me-4 link-secondary">
-            <i class="fab fa-linkedin"></i>
-          </a>
-          <a href="" class="me-4 link-secondary">
-            <i class="fab fa-github"></i>
-          </a>
-        </div>
-        <!-- Right -->
-      </section>
-      <!-- Section: Social media -->
-
-      <!-- Section: Links  -->
-      <section class="">
-        <div class="container text-center text-md-start mt-5">
-          <!-- Awal Grid row -->
-          <div class="row mt-3">
-            <!-- Awal Grid column -->
-            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-              <!-- Sekilas About -->
-              <h6 class="text-uppercase fw-bold mb-4"><i class="fas fa-gem me-3 text-secondary"></i>Yayasan Makmur Ruang</h6>
-              <p>Didirikan untuk membangun dan mempersatukan Ummat serta memudahkan uluran untuk sesama</p>
-            </div>
-            <!-- Akhir Grid column -->
-
-            <!-- Awal Grid column 2 -->
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-              <!-- Links -->
-              <h6 class="text-uppercase fw-bold mb-4">Products</h6>
-              <p>
-                <a href="#!" class="text-reset">Ruang Donasi</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">Ruang Ngaji</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">Merchandise</a>
-              </p>
-            </div>
-            <!-- Akhir Grid column 2 -->
-
-            <!-- Awal Grid column 3 -->
-            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-              <!-- Links -->
-              <h6 class="text-uppercase fw-bold mb-4">Company</h6>
-              <p>
-                <a href="#!" class="text-reset">About Us</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">Contact Us</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">FAQ</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">Help</a>
-              </p>
-            </div>
-            <!-- Akhir Grid column 3 -->
-
-            <!-- Grid column 4-->
-            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-              <!-- Links -->
-              <h6 class="text-uppercase fw-bold mb-4">   Contact</h6>
-              <p><i class="fas fa-home me-3 text-secondary"></i>Jl. TMB Raya ITS, Surabaya </p>
-              <p>
-                <i class="fas fa-envelope me-3 text-secondary"></i>
-                info@ruangmakmur.com
-              </p>
-              <p><i class="fas fa-phone me-3 text-secondary"></i> +62 817 873 903</p>
-              <p><i class="fas fa-print me-3 text-secondary"></i> +62 811 3344 889</p>
-            </div>
-            <!-- Akhir Grid column 4 -->
-          </div>
-          <!-- Grid row -->
-        </div>
-      </section>
-      <!-- Section: Links  -->
-
-      <!-- Copyright -->
-      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025)">
-        © 2023 Copyright:
-        <a class="text-reset fw-bold" href="index.html">Makmur Ruang (kelompok 6)</a>
-      </div>
-      <!-- Copyright -->
-    </footer>
-    <!-- AKHIR FOOTER -->
   </body>
   <!-- RESOURCE JS -->
   <script src="main.js"></script>
 </html>
-
