mbenakno home donasi

--- a/src/Home/index.html
+++ b/src/Home/index.html
@@ -92,7 +92,7 @@
       <div>
         <a href="/src/DetailDonasi/index.html">
           <img src="/img/donasi/palestine.jpg" alt="" />
-          <h6>Bantuan Untuk Korban Palestina</h6>
+          <h6>HALO Untuk Korban Palestina</h6>
           <h4>Palestina</h4>
           <p>Terkumpul : Rp 1.000.000</p>
           <button>Donasi</button>
