--- a/src/Home/index.html
+++ b/src/Home/index.html
@@ -21,36 +21,15 @@
   </head>
   <body>
     <!-- AWAL NAVBAR AWAL -->
-    <nav class="navbar navbar-expand-lg">
-      <div class="container">
-        <a class="navbar-brand" href="#">Ruang Ngaji</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Tentang Kami</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Kontak Kami</a>
-            </li>
-          </ul>
-        </div>
-      </div>
+    <nav class="navbar">
+      <a class="navbar-brand" href="#">Ruang Ngaji</a>
+      <ul>
+        <li>Home</li>
+        <li>Tentang Kami</li>
+        <li>Kontak Kami</li>
+      </ul>
     </nav>
-    <!-- AKHIR NAVBAR TEXT -->
+       <!-- AKHIR NAVBAR TEXT -->
 
     <!-- Carousel -->
     <div class="wrapper">
@@ -110,17 +89,10 @@
     <!-- NAV BUTTON RUANG DONASI -->
     <section class="ruang-donasi">
       <div>
-<<<<<<< HEAD
-        <a href="/src/DetailDonasi/index.html">
-          <img src="/img/donasi/palestine.jpg" alt="" />
-          <h6>HALO Untuk Korban Palestina</h6>
-          <h4>Palestina</h4>
-=======
         <a href="https://kitabisa.com/campaign/bisabantuinfra">
           <img src="../../img/kobong.jpeg" alt="" />
           <h6>Yayasan Ngobong Omah</h6>
           <h4>KOBONGAN</h4>
->>>>>>> cb7a6211279b2d52fefb6261cc0ee642f67c76bb
           <p>Terkumpul : Rp 1.000.000</p>
           <button>Donasi</button>
         </a>
@@ -234,8 +206,8 @@
 
             <!-- Grid column 4-->
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-              <!-- Links -->
-              <h6 class="text-uppercase fw-bold mb-4">   Contact</h6>
+              <div class="contact">
+                <h6 class="text-uppercase fw-bold mb-4">   Contact</h6>
               <p><i class="fas fa-home me-3 text-secondary"></i>Jl. TMB Raya ITS, Surabaya </p>
               <p>
                 <i class="fas fa-envelope me-3 text-secondary"></i>
@@ -243,6 +215,9 @@
               </p>
               <p><i class="fas fa-phone me-3 text-secondary"></i> +62 817 873 903</p>
               <p><i class="fas fa-print me-3 text-secondary"></i> +62 811 3344 889</p>
+              </div>
+              <!-- Links -->
+              
             </div>
             <!-- Akhir Grid column 4 -->
           </div>
