--- a/src/Home/index.html
+++ b/src/Home/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="shortcut icon" type="R-icon" href="/asset/img/icon/RUANG.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Ruang Ngaji</title>
+    <title>Ruang Berkah</title>
 
     <!-- BOOSTRAP AND STYLE -->
     <link
@@ -17,17 +18,30 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/asset/css/stylehome.css" />
   </head>
   <body>
     <!-- AWAL NAVBAR AWAL -->
-    <nav class="navbar">
-      <a class="navbar-brand" href="#">Ruang Ngaji</a>
-      <ul>
-        <li>Home</li>
-        <li>Tentang Kami</li>
-        <li>Kontak Kami</li>
-      </ul>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
+        <a class="navbar-brand" href="/src/Home/index.html"> <img src="/asset/img/icon/logoR.gif" alt="LOGO" class="img-logo" /> RUANG BERKAH</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/src/Home/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/src/Aboutus/index.html">Tentang Kami</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Kontak Kami</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
        <!-- AKHIR NAVBAR TEXT -->
 
@@ -40,11 +54,11 @@
         <span id="slide-4"></span>
         <span id="slide-5"></span>
         <div class="images">
-          <img src="/img/carousel/quotes.png" .. />
-          <img src="/img/carousel/About us.png" />
-          <img src="/img/carousel/ruangdonasi.png" />
-          <img src="/img/carousel/flashdisk murajaah.png" />
-          <img src="/img/carousel/Buku anak-anak.png" />
+          <img src="/asset/img/carousel/muhammd-7.png" .. />
+          <img src="/asset/img/carousel/RUANG NGAJI.gif" />
+          <img src="/asset/img/carousel/RUANG DONASI.gif" />
+          <img src="/asset/img/carousel/flashdisk.png" />
+          <img src="/asset/img/carousel/BUKU.png" />
         </div>
       </div>
     </div>
@@ -80,7 +94,7 @@
         <i id="icon" class="bi bi-play-circle-fill"></i>
         <audio
           id="audio"
-          src="../../music/y2mate.com - Ariana Grande  Fantasize Lyrics.mp3"
+          src="/asset/music/y2mate.com - Ariana Grande  Fantasize Lyrics.mp3"
         ></audio>
       </div>
     </section>
@@ -89,26 +103,19 @@
     <!-- NAV BUTTON RUANG DONASI -->
     <section class="ruang-donasi">
       <div>
-<<<<<<< HEAD
-        <a href="/src/DetailDonasi/index.html">
-          <img src="/img/donasi/palestine.jpg" alt="" />
-          <h6>HALO Untuk Korban Palestina</h6>
-          <h4>Palestina</h4>
-=======
-        <a href="https://kitabisa.com/campaign/bisabantuinfra">
-          <img src="../../img/kobong.jpeg" alt="" />
-          <h6>Yayasan Ngobong Omah</h6>
-          <h4>KOBONGAN</h4>
->>>>>>> 640aca41bb0fae34ef17ff5463431ac28f9b5cd7
+        <a href="/src/DetailDonasi/palestina.html">
+          <img src="/asset/img/donasi/PALESTIN1A.png" alt="" />
+          <h6>Darurat! Bersama Bantu Pertahankan Gaza</h6>
+          <h4>Solidaritas untuk Gaza</h4>
           <p>Terkumpul : Rp 1.000.000</p>
           <button>Donasi</button>
         </a>
       </div>
       <div>
-        <a href="https://kitabisa.com/campaign/bisabantuinfra">
-          <img src="../../img/kobong.jpeg" alt="" />
-          <h6>Yayasan Ngobong Omah</h6>
-          <h4>KOBONGAN</h4>
+        <a href="/src/DetailDonasi/kalimatan.html">
+          <img src="/asset/img/donasi/HUTAN.png" alt="" />
+          <h6>Darurat! Asap Tebal Kebakaran Hutan Kepung Kalbar</h6>
+          <h4>Asap Tebal renggut Nyawa</h4>
           <p>Terkumpul : Rp 1.000.000</p>
           <button>Donasi</button>
         </a>
@@ -154,7 +161,7 @@
           </a>
           <a href="" class="me-4 link-secondary">
             <i class="fab fa-linkedin"></i>
-          </a>
+          </a>  
           <a href="" class="me-4 link-secondary">
             <i class="fab fa-github"></i>
           </a>
@@ -172,7 +179,7 @@
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
               <!-- Sekilas About -->
               <h6 class="text-uppercase fw-bold mb-4"><i class="fas fa-gem me-3 text-secondary"></i>Yayasan Makmur Ruang</h6>
-              <p>Didirikan untuk membangun dan mempersatukan Ummat serta memudahkan uluran untuk sesama</p>
+              <p>Didirikan untuk membangun dan mempersatukan Umat dalam berlomba-lomba menuju kebaikan serta memudahkan uluran untuk sesama</p>
             </div>
             <!-- Akhir Grid column -->
 
@@ -181,10 +188,10 @@
               <!-- Links -->
               <h6 class="text-uppercase fw-bold mb-4">Products</h6>
               <p>
-                <a href="#!" class="text-reset">Ruang Donasi</a>
+                <a href="/src/Home/index.html" class="text-reset">Ruang Donasi</a>
               </p>
               <p>
-                <a href="#!" class="text-reset">Ruang Ngaji</a>
+                <a href="/src/Home/index.html" class="text-reset">Ruang Ngaji</a>
               </p>
               <p>
                 <a href="#!" class="text-reset">Merchandise</a>
@@ -197,7 +204,7 @@
               <!-- Links -->
               <h6 class="text-uppercase fw-bold mb-4">Company</h6>
               <p>
-                <a href="#!" class="text-reset">About Us</a>
+                <a href="/src/Aboutus/index.html" class="text-reset">About Us</a>
               </p>
               <p>
                 <a href="#!" class="text-reset">Contact Us</a>
@@ -214,7 +221,7 @@
             <!-- Grid column 4-->
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
               <div class="contact">
-                <h6 class="text-uppercase fw-bold mb-4">   Contact</h6>
+                <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
               <p><i class="fas fa-home me-3 text-secondary"></i>Jl. TMB Raya ITS, Surabaya </p>
               <p>
                 <i class="fas fa-envelope me-3 text-secondary"></i>
@@ -244,5 +251,5 @@
 
   </body>
   <!-- RESOURCE JS -->
-  <script src="main.js"></script>
+  <script src="/asset/js/mainhome.js"></script>
 </html>
