--- a/src/DetailDonasi/palestina.html
+++ b/src/DetailDonasi/palestina.html
@@ -2,19 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" type="R-icon" href="/asset/css/styledonasi.css" />
+    <link rel="shortcut icon" type="R-icon" href="/asset/img/icon/RUANG.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- link style & boostrap &js -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/asset/css/styledonasi.css" />
 
-    <title>Ruang Donasi</title>
+    <title>Ruang Berkah</title>
   </head>
   <body>
     <!-- AWAL NAVBAR -->
     <nav class="navbar navbar-expand-lg">
       <div class="container">
-        <a class="navbar-brand" href="#">Ruang Ngaji</a>
+        <a class="navbar-brand" href="/src/Home/index.html"> <img src="/asset/img/icon/logoR.gif" alt="LOGO" class="img-logo" /> RUANG BERKAH</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,7 +26,12 @@
               <a class="nav-link active" aria-current="page" href="/src/Home/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Tentang Kami</a>
+              <a
+                class="nav-link"
+                href="/src/Aboutus/index.html
+              "
+                >Tentang Kami</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Kontak Kami</a>
@@ -37,23 +44,34 @@
 
     <!-- AWAL SEKILAS -->
     <div class="fotodonasi">
-      <img src="/img/donasi/palestine.jpg" />
-      <h1>Warga Palestina Butuh Bantuan Kita</h1>
-      <p>
-        Data terkini (17/10), korban warga sipil yang meninggal dunia akibat serangan di Jalur Gaza, Palestina mencapai 2.900+ orang, 1.000+ diantaranya adalah anak-anak. Sedangkan, 10.000+ orang luka berat dan ratusan ribu warga lainnya
-        mengungsi. Namun, keadaan mereka di pengungsian sangat darurat, kebutuhan pokok mereka menipis! Sejak serangan Hamas akhir pekan lalu, Israel telah mengepung Gaza, memutus pasokan listrik, bahan bakar, makanan, barang dan air.
-        Pasokan listrik utama di Gaza padam setelah satu-satunya pembangkit listrik di sana kehabisan bahan bakar. Akibatnya, lebih dari 338.000 warga Palestina yang mengungsi mengalami kekurangan makanan dan kebutuhan lainnya untuk
-        bertahan hidup. Saat ini, lembaga filantropi yang ada di sini telah mengirimkan sebagian bantuan kepada para korban. Namun, karena keadaan yang terbatas, kami masih membutuhkan bantuan para orang baik di Indonesia. Untuk itu, dengan
-        rendah hati kami mengajak teman-teman menyalurkan bantuan untuk mereka. Bantuan sekecil apapun akan sangat membantu saudara kita yang terdampak konflik di Palestina.
-      </p>
+      <div class="container">
+        <img src="/asset/img/donasi/PALESTIN1A.png" />
+        <h1>Warga Palestina Butuh Bantuan Kita</h1>
+        <p>
+          Data terkini (17/10), korban warga sipil yang meninggal dunia akibat serangan di Jalur Gaza, Palestina mencapai 2.900+ orang, 1.000+ diantaranya adalah anak-anak. Sedangkan, 10.000+ orang luka berat dan ratusan ribu warga lainnya
+          mengungsi. Namun, keadaan mereka di pengungsian sangat darurat, kebutuhan pokok mereka menipis! Sejak serangan Hamas akhir pekan lalu, Israel telah mengepung Gaza, memutus pasokan listrik, bahan bakar, makanan, barang dan air.
+          Pasokan listrik utama di Gaza padam setelah satu-satunya pembangkit listrik di sana kehabisan bahan bakar. Akibatnya, lebih dari 338.000 warga Palestina yang mengungsi mengalami kekurangan makanan dan kebutuhan lainnya untuk
+          bertahan hidup. Saat ini, lembaga filantropi yang ada di sini telah mengirimkan sebagian bantuan kepada para korban. Namun, karena keadaan yang terbatas, kami masih membutuhkan bantuan para orang baik di Indonesia. Untuk itu,
+          dengan rendah hati kami mengajak teman-teman menyalurkan bantuan untuk mereka. Bantuan sekecil apapun akan sangat membantu saudara kita yang terdampak konflik di Palestina.
+        </p>
+      </div>
+
       <hr />
     </div>
     <!-- AKHIR SEKILAS -->
 
     <!-- PROGGRESBAR -->
 
-    <div id="progress-bar-container">
-      <div id="progress-bar">%</div>
+    <div class="progress-wrapper">
+      <div class="text-wrapper">
+        <p class="above-progress">Target : Rp1.000.000.000</p>
+      </div>
+      <div id="progress-bar-container">
+        <div id="progress-bar">%</div>
+      </div>
+      <div class="text-wrapper">
+        <p class="below-progress">Terkumpul : Rp600.000.000</p>
+      </div>
     </div>
 
     <!-- AKHIR PROGRESBAR -->
@@ -79,5 +97,5 @@
     <!-- AKHIR BUTTON NOMINAL -->
   </body>
   <!-- RESOURE JS -->
-  <script src="main.js"></script>
+  <script src="/asset/js/maindonasi.js"></script>
 </html>
