--- a/src/Payment/index.html
+++ b/src/Payment/index.html
@@ -2,18 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" type="R-icon" href="/img/icon/RUANG.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/asset/css/stylepayment.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="#">Ruang Ngaji</a>
+    <!-- NAVBAR AWAL -->
+    <nav class="navbar">
+      <a class="navbar-brand" href="/src/Home/index.html"> RUANG MAKMUR</a>
     </nav>
+    <!-- NAVBAR AKHIR -->
     <main>
       <h3>Metode Pembayaran :</h3>
       <section>
@@ -104,5 +107,5 @@
       </section>
     </main>
   </body>
-  <script src="main.js"></script>
+  <script src="/asset/js/mainpayment.js"></script>
 </html>
