--- a/src/Home/index.html
+++ b/src/Home/index.html
@@ -22,7 +22,7 @@
   <body>
     <!-- AWAL NAVBAR AWAL -->
     <nav class="navbar">
-      <a class="navbar-brand" href="#">Ruang Ngaji</a>
+      <img src="../../img/himit.png" alt="">
       <ul>
         <li>Home</li>
         <li>Tentang Kami</li>
@@ -40,11 +40,11 @@
         <span id="slide-4"></span>
         <span id="slide-5"></span>
         <div class="images">
-          <img src="/img/carousel/quotes.png" .. />
-          <img src="/img/carousel/About us.png" />
-          <img src="/img/carousel/ruangdonasi.png" />
-          <img src="/img/carousel/flashdisk murajaah.png" />
-          <img src="/img/carousel/Buku anak-anak.png" />
+          <img src="../../img/carousel/quotes.png"/>
+          <img src="../../img/carousel/About us.png" />
+          <img src="../..//img/carousel/ruangdonasi.png" />
+          <img src="../..//img/carousel/flashdisk murajaah.png" />
+          <img src="../..//img/carousel/Buku anak-anak.png" />
         </div>
       </div>
     </div>
@@ -68,10 +68,11 @@
       <button class="donasi">Ruang Donasi</button>
     </div>
 
+
     <!-- AKHIR BUTTON LINKED -->
 
     <!-- NAV BUTTON RUANG NGAJI -->
-    <section class="ruang-ngaji">
+    <!--<section class="ruang-ngaji">
       <div class="song">
         <div>
           <h4>Song Name</h4>
@@ -79,18 +80,19 @@
         </div>
         <i id="icon" class="bi bi-play-circle-fill"></i>
         <audio
-          id="audio"
           src="../../music/y2mate.com - Ariana Grande  Fantasize Lyrics.mp3"
         ></audio>
       </div>
-    </section>
+    </section>-->
+    <section class="ruang-ngaji"></section>
+    
     <!-- END NAV BUTTON RUANG NGAJI -->
 
     <!-- NAV BUTTON RUANG DONASI -->
     <section class="ruang-donasi">
       <div>
         <a href="https://kitabisa.com/campaign/bisabantuinfra">
-          <img src="../../img/kobong.jpeg" alt="" />
+          <img src="../../img/donasi/palestine.jpg" alt="" />
           <h6>Yayasan Ngobong Omah</h6>
           <h4>KOBONGAN</h4>
           <p>Terkumpul : Rp 1.000.000</p>
@@ -234,7 +236,7 @@
       <!-- Copyright -->
     </footer>
     <!-- AKHIR FOOTER -->
-
+  
   </body>
   <!-- RESOURCE JS -->
   <script src="main.js"></script>
