--- a/src/Home/index.html
+++ b/src/Home/index.html
@@ -22,15 +22,6 @@
   </head>
   <body>
     <!-- AWAL NAVBAR AWAL -->
-<<<<<<< HEAD
-    <nav class="navbar">
-      <img src="../../img/himit.png" alt="">
-      <ul>
-        <li>Home</li>
-        <li>Tentang Kami</li>
-        <li>Kontak Kami</li>
-      </ul>
-=======
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="/src/Home/index.html"> <img src="/asset/img/icon/logoR.gif" alt="LOGO" class="img-logo" /> RUANG BERKAH</a>
@@ -46,12 +37,11 @@
               <a class="nav-link" href="/src/Aboutus/index.html">Tentang Kami</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Kontak Kami</a>
+              <a class="nav-link" href="/src/contactus/index.html">Kontak Kami</a>
             </li>
           </ul>
         </div>
       </div>
->>>>>>> 6823b03a5091e106b15c97a5d51209bc1c285b4c
     </nav>
        <!-- AKHIR NAVBAR TEXT -->
 
@@ -64,19 +54,11 @@
         <span id="slide-4"></span>
         <span id="slide-5"></span>
         <div class="images">
-<<<<<<< HEAD
-          <img src="../../img/carousel/quotes.png"/>
-          <img src="../../img/carousel/About us.png" />
-          <img src="../..//img/carousel/ruangdonasi.png" />
-          <img src="../..//img/carousel/flashdisk murajaah.png" />
-          <img src="../..//img/carousel/Buku anak-anak.png" />
-=======
           <img src="/asset/img/carousel/muhammd-7.png" .. />
           <img src="/asset/img/carousel/RUANG NGAJI.gif" />
           <img src="/asset/img/carousel/RUANG DONASI.gif" />
           <img src="/asset/img/carousel/flashdisk.png" />
           <img src="/asset/img/carousel/BUKU.png" />
->>>>>>> 6823b03a5091e106b15c97a5d51209bc1c285b4c
         </div>
       </div>
     </div>
@@ -104,23 +86,7 @@
     <!-- AKHIR BUTTON LINKED -->
 
     <!-- NAV BUTTON RUANG NGAJI -->
-    <!--<section class="ruang-ngaji">
-      <div class="song">
-        <div>
-          <h4>Song Name</h4>
-          <p>John Doe</p>
-        </div>
-        <i id="icon" class="bi bi-play-circle-fill"></i>
-        <audio
-<<<<<<< HEAD
-          src="../../music/y2mate.com - Ariana Grande  Fantasize Lyrics.mp3"
-=======
-          id="audio"
-          src="/asset/music/y2mate.com - Ariana Grande  Fantasize Lyrics.mp3"
->>>>>>> 6823b03a5091e106b15c97a5d51209bc1c285b4c
-        ></audio>
-      </div>
-    </section>-->
+    
     <section class="ruang-ngaji"></section>
     
     <!-- END NAV BUTTON RUANG NGAJI -->
@@ -128,17 +94,10 @@
     <!-- NAV BUTTON RUANG DONASI -->
     <section class="ruang-donasi">
       <div>
-<<<<<<< HEAD
-        <a href="https://kitabisa.com/campaign/bisabantuinfra">
-          <img src="../../img/donasi/palestine.jpg" alt="" />
-          <h6>Yayasan Ngobong Omah</h6>
-          <h4>KOBONGAN</h4>
-=======
         <a href="/src/DetailDonasi/palestina.html">
           <img src="/asset/img/donasi/PALESTIN1A.png" alt="" />
           <h6>Darurat! Bersama Bantu Pertahankan Gaza</h6>
           <h4>Solidaritas untuk Gaza</h4>
->>>>>>> 6823b03a5091e106b15c97a5d51209bc1c285b4c
           <p>Terkumpul : Rp 1.000.000</p>
           <button>Donasi</button>
         </a>
