--- a/src/DetailDonasi/dhf.html
+++ b/src/DetailDonasi/dhf.html
@@ -45,12 +45,13 @@
     <!-- AWAL SEKILAS -->
     <div class="fotodonasi">
       <div class="container">
-        <img src="/asset/img/donasi/PALESTIN1A.png" />
-        <h1>Bantu Kalimantan Barat Bernapas!</h1>
+        <img src="/asset/img/donasi/Dhuafa.png" />
+        <h1>Bantu Ribuan Kaum Dhuafa Berobat</h1>
         <p>
-          Kebakaran Hutan dan Lahan (Karhutla) yang terjadi di sejumlah titik di wilayah Kalimantan Barat (Kalbar) selama beberapa hari terakhir memicu kabut asap tebal. Sebanyak 1.985 titik panas (hotspot) penyebab karhutla terpantau Badan
-          Metereologi Klimatologi dan Geofisika (BMKG) Kalbar, Karhutla ini terjadi di 5 daerah di Kalbar yakni Kota Pontianak, Kab.Kubu Raya, Kab. Sambas, Kab.Kapuas Hulu, serta Kab. Kayong Utara.Merespon bencana Karhutla tersebut, Tim
-          BAZNAS Tanggap Bencana langsung bergerak dengan membantu proses pemadaman kobaran api serta membantu warga yang terdampak yang terdampak kabut asap.
+          Sungguh terbuka lebar pahala bagi kita yang senantiasa berjibaku menolong ke sesama khususnya menolong fakir miskin dan dhuafa. Lewat kasih dan sayangmu, ratusan duafa terlantar bisa meningkatkan kualitas hidup dan lanjutkan
+          pengobatan!tak semua orang beruntung bisa menjalani hari tua dengan bahagia. Bagi mereka lansia dhuafa, tak jarang diserang penyakit yang awalnya terlihat sepele, seperti darah tinggi… pilunya, semua itu memicu penyumbatan
+          pembuluh darah dan membuat mereka harus dirawat intensif.Biaya RS yang mahal nyatanya amat mencekik. Jangankan untuk menebus semua itu, ongkos saja kadang mereka tak punya. Sebagai langkah nyata mebantu duafa, RUANG DONASI bersama
+          Yayasan Penghubung Kebaikan menginisiasi gerakan Bantu Dhuafa Berobat. Kami berharap program ini bisa menyapa dhuafa yang tidak bisa mendapatkan perawatan memadai jadi bisa dijangkau paramedis.
         </p>
       </div>
 
@@ -61,13 +62,13 @@
     <!-- PROGGRESBAR -->
     <div class="progress-wrapper">
       <div class="text-wrapper">
-        <p class="above-progress">Target : Rp100.000.000</p>
+        <p class="above-progress">Target : Rp125.000.000</p>
       </div>
       <div id="progress-bar-container">
         <div id="progress-bar">%</div>
       </div>
       <div class="text-wrapper">
-        <p class="below-progress">Terkumpul : Rp99.000.000</p>
+        <p class="below-progress">Terkumpul : Rp36.000.000</p>
       </div>
     </div>
 
@@ -94,5 +95,5 @@
     <!-- AKHIR BUTTON NOMINAL -->
   </body>
   <!-- RESOURE JS -->
-  <script src="/asset/js/kalimatan.js"></script>
+  <script src="/asset/js/dhf.js"></script>
 </html>
