--- a/src/DetailDonasi/libya.html
+++ b/src/DetailDonasi/libya.html
@@ -45,12 +45,11 @@
     <!-- AWAL SEKILAS -->
     <div class="fotodonasi">
       <div class="container">
-        <img src="/asset/img/donasi/PALESTIN1A.png" />
-        <h1>Bantu Kalimantan Barat Bernapas!</h1>
+        <img src="/asset/img/donasi/LIBYA.png" />
+        <h1>Penyintas Banjir Bandang di Libya</h1>
         <p>
-          Kebakaran Hutan dan Lahan (Karhutla) yang terjadi di sejumlah titik di wilayah Kalimantan Barat (Kalbar) selama beberapa hari terakhir memicu kabut asap tebal. Sebanyak 1.985 titik panas (hotspot) penyebab karhutla terpantau Badan
-          Metereologi Klimatologi dan Geofisika (BMKG) Kalbar, Karhutla ini terjadi di 5 daerah di Kalbar yakni Kota Pontianak, Kab.Kubu Raya, Kab. Sambas, Kab.Kapuas Hulu, serta Kab. Kayong Utara.Merespon bencana Karhutla tersebut, Tim
-          BAZNAS Tanggap Bencana langsung bergerak dengan membantu proses pemadaman kobaran api serta membantu warga yang terdampak yang terdampak kabut asap.
+          Bencana banjir bandang dan badai melanda wilayah bagian timur Libya pada Senin (11/9).Akibat bencana tersebut, ribuan warga meninggal dunia bahkan diperkirakan akan meningkat hingga 20.000 jiwa (jawapos.com). Rumah-rumah warga
+          rusak berat, sehingga saat ini ribuan warga terpaksa mengungsi dan membutuhkan bantuan segera.#OrangBaik, BAZNAS mengajak sahabat semua mari bersama tebar kepedulian bantu warga terdampak bencana di Libya.
         </p>
       </div>
 
@@ -67,7 +66,7 @@
         <div id="progress-bar">%</div>
       </div>
       <div class="text-wrapper">
-        <p class="below-progress">Terkumpul : Rp99.000.000</p>
+        <p class="below-progress">Terkumpul : Rp5.750.000</p>
       </div>
     </div>
 
@@ -94,5 +93,5 @@
     <!-- AKHIR BUTTON NOMINAL -->
   </body>
   <!-- RESOURE JS -->
-  <script src="/asset/js/kalimatan.js"></script>
+  <script src="/asset/js/libya.js"></script>
 </html>
