--- a/src/DetailDonasi/palestina.html
+++ b/src/DetailDonasi/palestina.html
@@ -97,5 +97,5 @@
     <!-- AKHIR BUTTON NOMINAL -->
   </body>
   <!-- RESOURE JS -->
-  <script src="/asset/js/maindonasi.js"></script>
+  <script src="/asset/js/palestina.js"></script>
 </html>
