--- a/src/Home/index.html
+++ b/src/Home/index.html
@@ -98,7 +98,7 @@
           <img src="/asset/img/donasi/PALESTIN1A.png" alt="" />
           <h6>Darurat! Bersama Bantu Pertahankan Gaza</h6>
           <h4>Solidaritas untuk Gaza</h4>
-          <p>Terkumpul : Rp 1.000.000</p>
+          <p>Target : Rp 1.000.000.000</p>
           <button>Donasi</button>
         </a>
       </div>
@@ -107,25 +107,25 @@
           <img src="/asset/img/donasi/HUTAN.png" alt="" />
           <h6>Darurat! Asap Tebal Kebakaran Hutan Kepung Kalbar</h6>
           <h4>Asap Tebal renggut Nyawa</h4>
-          <p>Terkumpul : Rp 1.000.000</p>
+          <p>Target : Rp 100.000.000</p>
           <button>Donasi</button>
         </a>
       </div>
       <div>
-        <a href="https://kitabisa.com/campaign/bisabantuinfra">
-          <img src="../../img/kobong.jpeg" alt="" />
-          <h6>Yayasan Ngobong Omah</h6>
-          <h4>KOBONGAN</h4>
-          <p>Terkumpul : Rp 1.000.000</p>
+        <a href="/src/DetailDonasi/libya.html">
+          <img src="/asset/img/donasi/LIBYA.png" alt="" />
+          <h6>Darurat! Banjir Bandang Libya </h6>
+          <h4>Ribuan rumah tenggelam di Kota Derma</h4>
+          <p>Target : Rp 100.000.000</p>
           <button>Donasi</button>
         </a>
       </div>
       <div>
-        <a href="https://kitabisa.com/campaign/bisabantuinfra">
-          <img src="../../img/kobong.jpeg" alt="" />
-          <h6>Yayasan Ngobong Omah</h6>
-          <h4>KOBONGAN</h4>
-          <p>Terkumpul : Rp 1.000.000</p>
+        <a href="/src/DetailDonasi/dhf.html">
+          <img src="/asset/img/donasi/Dhuafa.png" alt="" />
+          <h6>Help! Ribuan Dhuafa butuh bantuan berobat </h6>
+          <h4>Bantuan Pengobatan Kaum Dhuafa</h4>
+          <p>Target : Rp 125.000.000</p>
           <button>Donasi</button>
         </a>
       </div>
