--- a/src/Home/index.html
+++ b/src/Home/index.html
@@ -201,10 +201,7 @@
                 <a href="#!" class="text-reset">Contact Us</a>
               </p>
               <p>
-                <a href="#!" class="text-reset">FAQ</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">Help</a>
+                <a href="https://wa.me/6281230200209" target="  blank" class="text-reset">Help</a>
               </p>
             </div>
             <!-- Akhir Grid column 3 -->
