--- a/src/Home/index.html
+++ b/src/Home/index.html
@@ -201,10 +201,7 @@
                 <a href="#!" class="text-reset">Contact Us</a>
               </p>
               <p>
-                <a href="#!" class="text-reset">FAQ</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">Help</a>
+                <a href="https://api.whatsapp.com/send/?phone=681230200209&text&type=phone_number&app_absent=0" class="text-reset">Help</a>
               </p>
             </div>
             <!-- Akhir Grid column 3 -->
