--- a/src/Payment/pay10.html
+++ b/src/Payment/pay10.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" type="R-icon" href="/img/icon/RUANG.png">
+    <link rel="shortcut icon" type="R-icon" href="/asset/img/icon/RUANG.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Payment-R</title>
     <link rel="stylesheet" href="/asset/css/stylepayment.css" />
     <link
       rel="stylesheet"
@@ -28,34 +28,42 @@
           <i class="bi bi-caret-up"></i>
         </div>
         <div class="emoney">
-          <div class="gopay" onclick="https://www.vector69.com/2019/12/logo-gopay-svg.html">
+          <a href="https://app.sandbox.midtrans.com/payment-links/1700746020981" target="blank">
+          <div class="gopay">
             <img src="/asset/img/payment_asset/gopay.png" alt="Gopay" />
             <div class="pay-desc">
               <h6>Pembayaran QR</h6>
               <p>Pembayaran dengan aplikasi pembayaran pilihan anda.</p>
             </div>
           </div>
+        </a>
           <div class="shopeepay">
             <img src="/asset/img/payment_asset/shopeepay.png" alt="ShopeePay" />
+            <a href="https://app.sandbox.midtrans.com/payment-links/1700746263312" target="blank">
             <div class="pay-desc">
               <h6>Pembayaran Shopeepay</h6>
               <p>Pembayaran melalui akun Shopeepay kamu.</p>
             </div>
           </div>
+        </a>
           <div class="dana">
             <img src="/asset/img/payment_asset/dana.png" alt="Dana" />
+            <a href="https://app.sandbox.midtrans.com/payment-links/1700746649408" target="blank">
             <div class="pay-desc">
               <h6>Pembayaran Dana</h6>
               <p>Pembayaran melalui akun dana kamu.</p>
             </div>
           </div>
+        </a>
           <div class="linkaja">
             <img src="/asset/img/payment_asset/linkaja.svg" alt="LinkAja" />
+            <a href="https://app.sandbox.midtrans.com/payment-links/1700746649408" target="blank">
             <div class="pay-desc">
               <h6>Pembayaran LinkAja</h6>
               <p>Pembayaran melalui akun LinkAja kamu.</p>
             </div>
           </div>
+        </a>
         </div>
       </section>
       <section>
@@ -69,40 +77,50 @@
         <div class="bank">
           <div class="bri">
             <img src="/asset/img/payment_asset/bri.webp" alt="bri" />
+            <a href="https://app.sandbox.midtrans.com/payment-links/1700746795277" target="blank">
             <div class="pay-desc">
               <h6>Pembayaran BRI</h6>
               <p>Pembayaran melalui rekening BRI anda.</p>
             </div>
           </div>
+        </a>
           <div class="bca">
             <img src="/asset/img/payment_asset/bca.png" alt="bca" />
+            <a href="https://app.sandbox.midtrans.com/payment-links/1700747126643" target="blank">
             <div class="pay-desc">
               <h6>Pembayaran BCA</h6>
               <p>Pembayaran melalui rekening BCA kamu.</p>
             </div>
           </div>
+        </a>
           <div class="mandiri">
             <img src="/asset/img/payment_asset/mandiri.webp" alt="mandiri" />
+            <a href="https://app.sandbox.midtrans.com/payment-links/1700747188157" target="blank">
             <div class="pay-desc">
               <h6>Pembayaran MANDIRI</h6>
               <p>Pembayaran melalui rekening MANDIRI kamu.</p>
             </div>
           </div>
+        </a>
           <div class="bni">
             <img src="/asset/img/payment_asset/bni.png" alt="bni" />
+            <a href="https://app.sandbox.midtrans.com/payment-links/1700747338199" target="blank">
             <div class="pay-desc">
               <h6>Pembayaran BNI</h6>
               <p>Pembayaran melalui rekening BNI kamu.</p>
             </div>
           </div>
+        </a>
           <div class="paypal">
             <img src="/asset/img/payment_asset/paypal.png" alt="paypal" />
+            <a href="https://www.paypal.com/webapps/shoppingcart/error?flowlogging_id=f556086be12bb&code=GENERIC_ERROR&mfid=1700750723155_f556086be12bb" target="blank">
             <div class="pay-desc">
               <h6>Pembayaran PAYPAL</h6>
               <p>Pembayaran melalui rekening PAYPAL kamu.</p>
             </div>
           </div>
         </div>
+      </a>
         </div>
       </section>
     </main>
